<resources>
    <string name="app_name">CAFEIN</string>
    <string name="sign_up_title">회원가입</string>
    <string name="admin_sign_up_title">관리자 등록하기</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd_check">비밀번호 확인</string>
    <string name="id">아이디</string>
    <string name="nickname">닉네임</string>
    <string name="sign_up">회원가입</string>
    <string name="cafe_name">카페 이름</string>
    <string name="admin_sign_up">관리자 등록하기</string>
    <string name="admin_to_sign_up">카페를 소유하고 계십니까?</string>
    <string name="sign_in">로그인</string>
    <string name="not_sign_in">로그인 없이 둘러보기</string>
    <string name="cafe_list">즐겨찾기 한 카페 목록 보기</string>
    <string name="cafe_search">현재 위치에서 카페 검색하기</string>
    <string name="booking_cafe">카페 예약하기</string>
    <string name="hello">안녕하세요</string>
    <string name="sign_up_success">회원가입이 완료 되었습니다.</string>
    <string name="sign_up_failure">회원가입에 실패 하였습니다.</string>
    <string name="checking_sign_up_text">입력 값을 확인 해 주세요.</string>
    <string name="checking_pwd_warning">비밀번호가 일치 하지 않습니다.</string>
    <string name="checking_email_warning">이미 존재하는 이메일 입니다.</string>
    <string name="checking_email_pwd_warning">아이디 혹은 패스워드가 다릅니다.</string>
    <string name="bookmark">즐겨찾기 목록</string>
    <string name="search_hint">카페 이름</string>
    <string name="search_title">검색</string>
</resources>