<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C3C69E4E"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CAFEIN"
            android:textSize="50dp"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/edit_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/login_warning"
            android:layout_width="274dp"
            android:layout_height="30dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/edit_id"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.439" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginBottom="50dp"
            android:autofillHints="id"
            android:hint="@string/id"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@id/sign_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/edit_id" />


        <Button
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="#88FBEE76"
            app:layout_constraintBottom_toTopOf="@id/sign_up"
            app:layout_constraintLeft_toLeftOf="@id/edit_pwd"
            app:layout_constraintRight_toRightOf="@id/edit_pwd"
            app:layout_constraintTop_toBottomOf="@id/edit_pwd" />

        <Button
            android:id="@+id/not_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/not_sign_in"
            android:background="@android:color/transparent"
            app:layout_constraintLeft_toLeftOf="@id/edit_pwd"
            app:layout_constraintRight_toRightOf="@id/edit_pwd"
            app:layout_constraintTop_toBottomOf="@id/sign_in" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="#88FBEE76"
            app:layout_constraintBottom_toTopOf="@id/admin_sign_up"
            app:layout_constraintLeft_toLeftOf="@id/edit_pwd"
            app:layout_constraintRight_toRightOf="@id/edit_pwd" />

        <Button
            android:id="@+id/admin_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/admin_to_sign_up"
            android:textColor="#2727C1"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/edit_pwd"
            app:layout_constraintRight_toRightOf="@id/edit_pwd" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>