<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignUpActivity"
    android:background="#C3C69E4E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/sign_up_title"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@id/edit_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints="id"
            android:hint="@string/id"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/edit_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <View
            android:id="@+id/edit_id_light"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toTopOf="@id/edit_id" />

        <TextView
            android:id="@+id/edit_id_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFailure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_id" />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/edit_pwd_check"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/edit_id" />


        <EditText
            android:id="@+id/edit_pwd_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/pwd_check"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/edit_nickname"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/edit_pwd" />

        <TextView
            android:id="@+id/edit_pwd_check_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFailure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_pwd_check" />

        <View
            android:id="@+id/edit_pwd_light"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/edit_pwd_check"
            app:layout_constraintRight_toRightOf="@id/edit_pwd_check"
            app:layout_constraintTop_toTopOf="@id/edit_pwd_check" />

        <EditText
            android:id="@+id/edit_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/sign_up"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/edit_pwd_check" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="#88FBEE76"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/edit_pwd"
            app:layout_constraintRight_toRightOf="@id/edit_pwd"
            app:layout_constraintTop_toBottomOf="@id/edit_nickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>