<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminSignUpActivity"
    android:background="#C3C69E4E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/admin_sign_up_title"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="45sp"
            app:layout_constraintBottom_toTopOf="@id/cafe_search_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/cafe_search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:iconifiedByDefault="false"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:queryHint="@string/cafe_name" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toTopOf="@id/edit_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cafe_search_view"
            tools:context=".AdminSignUpActivity" />

        <TextView
            android:id="@+id/cafe_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/map" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints="id"
            android:hint="@string/id"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@id/edit_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cafe_address" />

        <TextView
            android:id="@+id/edit_id_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFailure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_id" />

        <View
            android:id="@+id/edit_id_light"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toTopOf="@id/edit_id" />

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@id/edit_pwd_check"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/edit_id" />

        <EditText
            android:id="@+id/edit_pwd_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/pwd_check"
            android:inputType="textPassword"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@id/edit_nickname"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/edit_pwd" />

        <TextView
            android:id="@+id/edit_pwd_check_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFailure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_pwd_check" />

        <View
            android:id="@+id/edit_pwd_light"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/edit_pwd_check"
            app:layout_constraintRight_toRightOf="@id/edit_pwd_check"
            app:layout_constraintTop_toTopOf="@id/edit_pwd_check" />

        <EditText
            android:id="@+id/edit_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/nickname"
            android:inputType="textPassword"
            android:padding="20dp"
            app:layout_constraintBottom_toTopOf="@id/sign_up"
            app:layout_constraintLeft_toLeftOf="@id/edit_id"
            app:layout_constraintRight_toRightOf="@id/edit_id"
            app:layout_constraintTop_toBottomOf="@id/edit_pwd_check" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#88FBEE76"
            android:text="@string/admin_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/edit_pwd"
            app:layout_constraintRight_toRightOf="@id/edit_pwd"
            app:layout_constraintTop_toBottomOf="@id/edit_nickname" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>